--- a/blog/css/styling.css
+++ b/blog/css/styling.css
@@ -2,81 +2,66 @@
     box-sizing: border-box;
 }
 
-h1{
-    font-weight: lighter;
-}
-
-h2, h3{
-    margin: 0;
-}
-
-body{
-    background-color: #4ef9bd;
-    margin: 10px 0;
-    font-family: sans-serif;
-}
-
-
-
-.wrap{
+/* .wrap{
     width: 900px;
     margin: 0 auto;
     background-color: #fff;
     border-radius: 22px;
+} */
+
+body{
+    background-color: #4ef9bd;
+    font-family: sans-serif;
+    margin: 10px 0 0 0;
 }
 
-header{
-    padding: 40px;
-    overflow: hidden;
+.site{
+    display: grid;
+    grid-template-columns: 1fr 3fr auto auto;
+    grid-template-rows: auto auto auto auto;
+    grid-template-areas:
+    ". . . backtotop"
+    "navigation header . ."
+    ". article sidebar ."
+    "footer footer footer footer";
 }
 
-nav{
-    float: left;
-    padding: 40px;
-}
-
-header > #logo{
-    font-size: 2em;
-    float: Left;
-}
-
-
-main{
-    padding: 40px;
-    overflow: hidden;
-}
-
-section{
-    width: 60%;
-    float: left;
-}
-
-article{
-    padding: 20px 0;
-    border-bottom: 2px gray solid;
-}
-article:last-child{
-    border-bottom: 0px;
-}
-
-aside{
-    width: 25%;
-    float: right;
+.header{
+    grid-area: header;
     background-color: yellow;
-    padding: 15px;
 }
 
-aside h3{
-    background-color: #f76834;
-    color: #fff;
-    padding: 15px;
-}
-aside a{
-    color: #000;
+.links{
+    grid-area: sidebar;
+    background-color: yellow;
+    border-radius: 22px;
+    padding: 4px;
+    overflow: hidden;
 }
 
-footer{
-    padding: 16px;
-    border-top: 2px solid #ccc;
-    text-align: left;
+.sidebarlinks{
+    background-color: red;
+    border-radius: 18px;
+    padding: 5px;
+}
+
+.articles{
+    background-color: blue;
+    grid-area: article;
+}
+
+.footer{
+    grid-area: footer;
+    background-color: olive;
+    position: sticky;
+    bottom: 0;
+}
+
+
+.backtotop{
+    background: #25e19f;
+    text-align: right;
+    grid-area: backtotop;
+    position: sticky;
+    top: 10px;
 }
