--- a/blog/css/styling.css
+++ b/blog/css/styling.css
@@ -2,66 +2,92 @@
     box-sizing: border-box;
 }
 
-/* .wrap{
-    width: 900px;
-    margin: 0 auto;
-    background-color: #fff;
-    border-radius: 22px;
-} */
+a{
+    text-decoration: none;
+}
 
 body{
     background-color: #4ef9bd;
     font-family: sans-serif;
-    margin: 10px 0 0 0;
+    margin: 0;
 }
 
 .site{
     display: grid;
-    grid-template-columns: 1fr 3fr auto auto;
-    grid-template-rows: auto auto auto auto;
-    grid-template-areas:
-    ". . . backtotop"
-    "navigation header . ."
-    ". article sidebar ."
-    "footer footer footer footer";
+    grid-template-columns: 1fr 2fr 1fr;
+    grid-template-rows: auto;
 }
 
-.header{
-    grid-area: header;
+.titlecontainer{
+    grid-column: 2/3;
+    grid-row: 1/2;
+    display: grid;
+    grid-template-columns: 2fr;
+    grid-template-rows: 1fr auto;
+}
+
+.title{
+    grid-row: 1/2;
+    text-align: center;
     background-color: yellow;
+    padding: 12px;
+}
+
+.navigation{
+    grid-column: 1/2;
+    text-align: left;
+}
+
+.navigation > a :hover{
+    font-weight: bold;
+}
+
+.content{
+    grid-row: 2/3;
+    background-color: blue;
+    padding: 16px;
+}
+
+.sidebarcontainer{
+    grid-column: 3/4;
+    grid-row: 1/3;
+    display: grid;
+    grid-template-columns: 1fr auto;
+    grid-template-rows: 19em auto;
+    contain: content;
 }
 
 .links{
-    grid-area: sidebar;
-    background-color: yellow;
-    border-radius: 22px;
-    padding: 4px;
-    overflow: hidden;
+    grid-column: 1/2;
+    grid-row: 2/3;
+    background-color: orange;
+    border-radius: 18px;
+    padding: 10px;
 }
 
-.sidebarlinks{
+.actuallinks{
     background-color: red;
     border-radius: 18px;
-    padding: 5px;
+    padding: 15px;
+    list-style: inside; 
 }
-
-.articles{
-    background-color: blue;
-    grid-area: article;
-}
-
-.footer{
-    grid-area: footer;
-    background-color: olive;
-    position: sticky;
-    bottom: 0;
-}
-
 
 .backtotop{
-    background: #25e19f;
-    text-align: right;
-    grid-area: backtotop;
+    grid-column: 2/3;
+    grid-row: 1/2;
     position: sticky;
     top: 10px;
+}
+
+.backtotop :hover{
+    font-weight: lighter;
+}
+
+
+.footer{
+    grid-column: 1/4;
+    grid-row: 3/4;
+    background-color: olive;
+    position: sticky;
+    bottom: 0px;
 }
