--- a/JavaScript30/30 - Whack A Mole/style.css
+++ b/JavaScript30/30 - Whack A Mole/style.css
@@ -154,7 +154,7 @@ li {
   text-align: center;
 }
 
-.leaderboardEasy, .leaderboardNormal, .leaderboardHard, .leaderboardInsane, .leaderboardGOD {
+.leaderboardEasy, .leaderboardNormal, .leaderboardHard, .leaderboardInsane, .leaderboardGODMode {
   display: none;
   text-align: center;
   position: absolute;
@@ -162,6 +162,6 @@ li {
   transform: translatex(-50%);
 }
 
-.leaderboardEasy.active, .leaderboardNormal.active, .leaderboardHard.active, .leaderboardInsane.active, .leaderboardGOD.active {
+.leaderboardEasy.active, .leaderboardNormal.active, .leaderboardHard.active, .leaderboardInsane.active, .leaderboardGODMode.active {
   display: block;
 }
