--- a/tip calc/styling.css
+++ b/tip calc/styling.css
@@ -27,6 +27,10 @@ input, label {
     width: 100%;
 }
 
+.labbel {
+    text-align: center;
+}
+
 
 .calculatebutton {
     font-size: 1em;
@@ -34,7 +38,7 @@ input, label {
     background: aquamarine;
 }
 
-@media (min-width: 700px) {
+@media (min-width: 980px) {
     body {
         width: 60%;
         background: url(Urban_Candles-1.jpg) no-repeat center center fixed;
@@ -53,5 +57,9 @@ input, label {
 
     div {
         line-height: 4em;
+    }
+
+    .labbel {
+        text-align: left;
     }
 }
